# Slag

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  README.md
SlagTest/: main.cpp
examples/cube/: Main.cpp
src/: CommandBuffer.h  Frame.cpp  Frame.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsCard.cpp  GraphicsCard.h  PixelFormat.h  RenderAttachment.cpp  RenderAttachment.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SlagLib.cpp  SlagLib.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  Texture.h  Uniform.h
src/BackEnd/: ResourceManager.cpp  ResourceManager.h  SwapChain.cpp  SwapChain.h  VulkanBackEnd.cpp  VulkanBackEnd.h
src/slag/: Attachment.h  Buffer.cpp  Buffer.h  Clear.h  ClearValue.h  Color.cpp  Color.h  CommandBuffer.cpp  CommandBuffer.h  ComputeShader.cpp  ComputeShader.h  DataBuffer.cpp  DataBuffer.h  Descriptor.cpp  Descriptor.h  DescriptorBundle.cpp  DescriptorBundle.h  DescriptorGroup.cpp  DescriptorGroup.h  DescriptorPool.cpp  DescriptorPool.h  Frame.cpp  Frame.h  FrameBufferDescription.cpp  FrameBufferDescription.h  FrameGraph.cpp  FrameGraph.h  FrameGraphBuilder.cpp  FrameGraphBuilder.h  FrameGraphStage.cpp  FrameGraphStage.h  FrameResourceDescriptions.h  FrameResourceDictionary.cpp  FrameResourceDictionary.h  FrameResources.cpp  FrameResources.h  FramebufferDescription.cpp  FramebufferDescription.h  GPUMemoryBarrier.h  GPUMemoryBarriers.h  (+64 more)
src/slag/BackEnd/: BackEndLib.cpp  BackEndLib.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  UniformDataSetFunctionProvider.h  UniformDataSetHandler.cpp  UniformDataSetHandler.h
src/slag/BackEnd/DX12/: DX12Buffer.cpp  DX12Buffer.h  DX12CommandBuffer.cpp  DX12CommandBuffer.h  DX12DescriptorGroup.cpp  DX12DescriptorGroup.h  DX12DescriptorPool.cpp  DX12DescriptorPool.h  DX12Frame.cpp  DX12Frame.h  DX12GraphicsCard.cpp  DX12GraphicsCard.h  DX12Lib.cpp  DX12Lib.h  DX12Queue.cpp  DX12Queue.h  DX12Sampler.cpp  DX12Sampler.h  DX12Semaphore.cpp  DX12Semaphore.h  DX12Shader.cpp  DX12Shader.h  DX12ShaderPipeline.cpp  DX12ShaderPipeline.h  DX12Swapchain.cpp  DX12Swapchain.h  DX12Texture.cpp  DX12Texture.h  IDX12CommandBuffer.cpp  IDX12CommandBuffer.h
src/slag/BackEnd/Vulkan/: Extensions.cpp  Extensions.h  IVulkanCommandBuffer.cpp  IVulkanCommandBuffer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCPUBuffer.cpp  VulkanCPUBuffer.h  VulkanCPUDataBuffer.cpp  VulkanCPUDataBuffer.h  VulkanCPUIndexBuffer.cpp  VulkanCPUIndexBuffer.h  VulkanCPUVertexBuffer.cpp  VulkanCPUVertexBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanComputeShader.cpp  VulkanComputeShader.h  VulkanDataBuffer.h  VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.h  VulkanDescriptorGroup.cpp  VulkanDescriptorGroup.h  VulkanDescriptorGroupCache.cpp  VulkanDescriptorGroupCache.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSetLayoutCache.cpp  VulkanDescriptorSetLayoutCache.h  VulkanExtensions.cpp  VulkanExtensions.h  VulkanFrame.cpp  VulkanFrame.h  VulkanGPUBuffer.cpp  VulkanGPUBuffer.h  VulkanGPUDataBuffer.cpp  VulkanGPUDataBuffer.h  VulkanGPUIndexBuffer.cpp  VulkanGPUIndexBuffer.h  VulkanGPUMemoryReference.h  (+40 more)
src/slag/Resources/: Resource.cpp  Resource.h  ResourceConsumer.cpp  ResourceConsumer.h  ResourceManager.cpp  ResourceManager.h
src/slag/Utils/: RawPixelStream.h
src/slag/backends/: Backend.h
src/slag/backends/dx12/: DX12Backend.cpp  DX12Backend.h
src/slag/backends/vulkan/: VulkanBackend.cpp  VulkanBackend.h
src/slag/core/: Attachment.h  Buffer.cpp  Buffer.h  BufferView.cpp  BufferView.h  Clear.h  Color.cpp  Color.h  CommandBuffer.cpp  CommandBuffer.h  Descriptor.cpp  Descriptor.h  DescriptorBundle.cpp  DescriptorBundle.h  DescriptorGroup.cpp  DescriptorGroup.h  DescriptorPool.cpp  DescriptorPool.h  Dimensions.h  Frame.cpp  Frame.h  FrameResources.h  GPUBarriers.cpp  GPUBarriers.h  GPUQueue.h  GraphicsCard.h  GraphicsTypes.h  ICommandBuffer.cpp  ICommandBuffer.h  Operations.h  PixelFormatProperties.h  Pixels.cpp  Pixels.h  PlatformData.h  Sampler.cpp  Sampler.h  Semaphore.cpp  Semaphore.h  ShaderPipeline.cpp  ShaderPipeline.h  (+6 more)
src/slag/dxil_12/: DXIL12Reflection.cpp  DXIL12Reflection.h
src/slag/spirv/: SPIRVReflection.cpp  SPIRVReflection.h
src/slag/utilities/: SLAG_ASSERT.h
test/: DX12Environment.cpp  DX12Environment.h  Main.cpp  SlagTestsMain.cpp  VulkanEnvironment.cpp  VulkanEnvironment.h
test/resources/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  basic2.frag  basic2.frag.spv
test/resources/integration/: flat.frag  flat.vert
test/resources/shaders/: flat.frag  flat.vert  orange.frag  orange.vert
test/tests/: BufferTest.cpp  CommandBufferTest.cc  CommandBufferTest.cpp  CommandBufferTests.cpp  DescriptorGroupTest.cpp  GraphicsCardTests.cpp  IntegrationTests.cpp  ShaderTest.cpp  SwapchainTest.cpp  TextureTest.cpp  UniformDescriptorLayoutTest.cpp  UniformGroupTest.cpp
test/utils/: BarrierUtils.cpp  BarrierUtils.h  Window.cpp  Window.h
tests/: DX12Environment.cpp  DX12Environment.h  GraphicsAPIEnvironment.cpp  GraphicsAPIEnvironment.h  SlagTestsMain.cpp  Utilities.cpp  Utilities.h  VulkanEnvironment.cpp  VulkanEnvironment.h
tests/resources/shaders/: AllParameterTypes.fragment.dxil  AllParameterTypes.fragment.spv  AllParameterTypes.vertex.dxil  AllParameterTypes.vertex.spv  ComputeDraw.dxil  ComputeDraw.spv  ComputeDrawPush.spv  ParallelAdd.dxil  ParallelAdd.spv  PushConstants.fragment.spv  PushConstants.vertex.spv  SampledAddition.spv  TextureTypes.fragment.spv  TextureTypes.vertex.spv  TexturedDepth.fragment.dxil  TexturedDepth.fragment.spv  TexturedDepth.vertex.dxil  TexturedDepth.vertex.spv  UnlitTextured.fragment.dxil  UnlitTextured.fragment.spv  UnlitTextured.vertex.dxil  UnlitTextured.vertex.spv
tests/resources/shaders/src/: AllParameterTypes.slang  ComputeDraw.slang  ComputeDrawPush.slang  ParallelAdd.slang  (+5 more)
tests/tests/: Buffer.cpp  CommandBuffer.cpp  DescriptorBundle.cpp  DescriptorPool.cpp  GraphicsCard.cpp  ShaderPipeline.cpp  SwapChain.cpp  Texture.cpp  UniformBufferDescriptorLayout.cpp
tests/tests/general/: CommandBuffer.cpp
(+55 files in other folders)
